tests/paczka1/fuzzy1/67673301.err
Error in line 3: LTBs5WiPg S233 45,7
Error in line 12: YjElTq S233 86,9
Error in line 19: 4QlTO5 A313 60,4
Error in line 26: 6MoHKc49CC S233 32,7
